<resources>
    <string name="app_name">ScheduleProject</string>
    <string name="task_create_title">Enter title</string>
    <string name="task_create_des">Enter description</string>
    <string name="task_create_date">Enter date</string>
    <string name="task_create_rbtn_not">Not yet</string>
    <string name="task_create_rbtn_doing">Doing</string>
    <string name="task_create_rbtn_done">Done</string>
    <string name="task_create_rbtn_status">Status</string>
    <string name="task_create_priority">Priority</string>
    <string name="task_create_image">Image</string>
    <string name="task_create_camera">Camera</string>
    <string name="task_create_upload">Upload</string>
    <string name="btn_save">SAVE</string>
    <string name="task_create_datePicker">Choose Date</string>
    <string name="task_create_timePicker">Choose time</string>
    <string name="task_create_inactive">Error to open this activity. Not found group Id</string>
    <string name="register_button_title">Register</string>
    <string name="loggin_button_title">Log In</string>
    <string name="create_board_title">Create New Board</string>
    <string name="create_board_name">Name</string>
    <string name="create_board_color">Color</string>
    <string name="Edit_Button_Title">Edit</string>
    <string name="App_Icon_Description">This is app icon</string>
    <string name="Add_Board_Button_Text">+</string>
    <string name="Text_Current_Color">Current Color</string>
    <string name="Text_Edit_Board">Edit Board</string>
    <string name="Text_Enter_Name">Enter Name</string>
    <string name="add_card_name">+ Add a card</string>
    <string name="search_name">Search</string>
    <string name="search_hint">Search task here</string>
    <string name="add_list_name">Add list</string>
    <string name="edit_name">Edit title</string>
    <string name="task_notfound">This actvity not open. Task not found.</string>
    <string name="create_task_header">Add New Task</string>
    <string name="update_task_header">Update Task</string>
    <string name="task_detail_header">Task Detail</string>
    <string name="btn_back">Back</string>
    <string name="getting_started">Getting started</string>
    <string name="task_priority_1">Important_Urgent</string>
    <string name="task_priority_2">Important_Not urgent</string>
    <string name="task_priority">Not important_Urgent</string>
    <string name="task_priority_4">Not important_Not Urgent</string>
    <string name="task_edit_header">Edit Task</string>
</resources>
