<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:layout_marginBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="50dp"
            android:paddingTop="20dp"
            tools:context=".activity.CreateTaskActivity">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:gravity="center"
                android:text="@string/create_task_header"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/task_create_title"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/editTextDes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/task_create_des"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:ems="10"
                android:hint="@string/task_create_date"
                android:inputType="time" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:onClick="datePickerAction"
                    android:text="@string/task_create_datePicker" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:onClick="timePickerAction"
                    android:text="@string/task_create_timePicker" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:text="@string/task_create_rbtn_status"
                    android:textSize="18sp" />


                <RadioGroup
                    android:id="@+id/radioGroup_status"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButtonNotyet"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:checked="true"
                        android:text="@string/task_create_rbtn_not" />

                    <RadioButton
                        android:id="@+id/radioButtonDoing"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:checked="false"
                        android:text="@string/task_create_rbtn_doing" />

                    <RadioButton
                        android:id="@+id/radioButtonDone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:checked="false"
                        android:text="@string/task_create_rbtn_done" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:text="@string/task_create_priority"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_width="200dp"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButtonUI1"
                        android:layout_width="150dp"
                        android:layout_height="70dp"
                        android:checked="true"
                        android:text="RadioButton" />

                    <RadioButton
                        android:id="@+id/radioButtonUI2"
                        android:layout_width="150dp"
                        android:layout_height="70dp"
                        android:checked="false"
                        android:text="RadioButton" />

                    <RadioButton
                        android:id="@+id/radioButtonUI3"
                        android:layout_width="150dp"
                        android:layout_height="70dp"
                        android:checked="false"
                        android:text="RadioButton" />

                    <RadioButton
                        android:id="@+id/radioButtonUI4"
                        android:layout_width="150dp"
                        android:layout_height="70dp"
                        android:checked="false"
                        android:text="RadioButton" />
                </RadioGroup>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/task_create_image"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="cameraBtnAction"
                        android:text="@string/task_create_camera" />

                    <Button
                        android:id="@+id/buttonUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:onClick="uploadBtnAction"
                        android:text="@string/task_create_upload" />
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewProfilePic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@tools:sample/avatars[3]" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonBack_a"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="backBtnAction"
                    android:text="@string/btn_back" />
                <Button
                    android:id="@+id/buttonSave_a"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="saveBtnAction"
                    android:layout_marginLeft="105dp"
                    android:text="@string/btn_save" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_menu"
        />
</RelativeLayout>


