<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:layout_marginBottom="70dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="50dp"
        android:paddingTop="20dp"
        tools:context=".activity.CreateTaskActivity">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center"
            android:text="Task Detail"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_title"
            android:drawablePadding="20dp"
            android:padding="12dp"
            android:ems="10"
            android:textSize="18sp"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/textViewTextDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:drawableLeft="@drawable/ic_description"
            android:drawablePadding="20dp"
            android:minHeight="50dp"
            android:textSize="18sp"
            android:ems="10"
            android:gravity="start|top"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:drawableLeft="@drawable/ic_time_black"
            android:drawablePadding="20dp"
            android:padding="12dp"
            android:ems="10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="89dp"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:text="@string/task_create_rbtn_status"
                android:textSize="18sp" />


            <RadioGroup
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup_status">

                <RadioButton
                    android:id="@+id/radioButtonNotyet"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:checked="true"
                    android:text="@string/task_create_rbtn_not" />

                <RadioButton
                    android:id="@+id/radioButtonDoing"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:checked="false"
                    android:text="@string/task_create_rbtn_doing" />

                <RadioButton
                    android:id="@+id/radioButtonDone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:checked="false"
                    android:text="@string/task_create_rbtn_done" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/task_create_priority"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="224dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonUI1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:checked="true"
                    android:text="@string/task_priority_1" />

                <RadioButton
                    android:id="@+id/radioButtonUI2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:checked="false"
                    android:text="@string/task_priority_2" />

                <RadioButton
                    android:id="@+id/radioButtonUI3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:checked="false"
                    android:text="@string/task_priority" />

                <RadioButton
                    android:id="@+id/radioButtonUI4"
                    android:layout_width="215dp"
                    android:layout_height="50dp"
                    android:checked="false"
                    android:text="@string/task_priority_4" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/imageViewProfilePic_v"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars[3]" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonBack_v"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="backBtnAction"
            android:background="@drawable/task_button_3"
            android:text="@string/btn_back" />

    </LinearLayout>
</ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_menu"
        />
</RelativeLayout>